test: adding job base testing + clean unnecessary files of boilerplate
