# src/serverBuilder.ts
@@ -12,8 +12,6 @@ import { collectMetricsExpressMiddleware } from '@map-colonies/telemetry/prom-me
 import { Registry } from 'prom-client';
 import { ConfigType } from '@common/config';
 import { SERVICES } from '@common/constants';
-import { RESOURCE_NAME_ROUTER_SYMBOL } from './resourceName/routes/resourceNameRouter';
-import { ANOTHER_RESOURCE_ROUTER_SYMBOL } from './anotherResource/routes/anotherResourceRouter';
 import { JOB_ROUTER_SYMBOL } from './jobs/routes/jobRouter';
 
 @injectable()
@@ -24,8 +22,6 @@ export class ServerBuilder {
     @inject(SERVICES.CONFIG) private readonly config: ConfigType,
     @inject(SERVICES.LOGGER) private readonly logger: Logger,
     @inject(SERVICES.METRICS) private readonly metricsRegistry: Registry,
-    @inject(RESOURCE_NAME_ROUTER_SYMBOL) private readonly resourceNameRouter: Router,
-    @inject(ANOTHER_RESOURCE_ROUTER_SYMBOL) private readonly anotherResourceRouter: Router,
     @inject(JOB_ROUTER_SYMBOL) private readonly jobRouter: Router
   ) {
     this.serverInstance = express();
@@ -49,8 +45,6 @@ export class ServerBuilder {
   }
 
   private buildRoutes(): void {
-    this.serverInstance.use('/resourceName', this.resourceNameRouter);
-    this.serverInstance.use('/anotherResource', this.anotherResourceRouter);
     this.serverInstance.use('/jobs', this.jobRouter);
     this.buildDocsRoutes();
   }
